5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1103.log
== TEST (2019-04-23 22:42:58) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=b)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:43:47) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x<=b)and(x>=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:44:25) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:44:34) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.144269
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:44:39) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:45:23) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:46:34) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:46:50) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.198862
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:07:16) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 23:07:32) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.238259
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:07:35) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(a>=b):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:08:26) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 23:08:45) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,", ",b)
else:
   print(x,"nao pertence ao intervalo",a,", ",b)	

-- EXECUTION TIME:
0.150161
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 ,  4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 ,  22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:09:02) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo ",a,", ",b)
else:
   print(x,"nao pertence ao intervalo ",a,", ",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 ,  4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:15:02) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:34:56) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b)or(:
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- ERROR:
File "XXXX", line 6
    elif(x>=a)and(x<=b)or(:
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:35:03) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:35:14) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:35:30) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.163432
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:35:36) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:35:56) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:40:38) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo" a,",", b )	

-- EXECUTION TIME:
0.203681
-- ERROR:
  File "/home/codebench/codes/1692/1103/main.py", line 9
    print(x,"nao pertence ao intervalo" a,",", b )	
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:40:51) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,", ",b)
else:
   print(x,"nao pertence ao intervalo" a,",", b )	

-- EXECUTION TIME:
0.130048
-- ERROR:
  File "/home/codebench/codes/1692/1103/main.py", line 9
    print(x,"nao pertence ao intervalo" a,",", b )	
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:34:47) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,", ",b)
else:
   print(x,"nao pertence ao intervalo" a,",", b )	

-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo" a,",", b )	
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:35:06) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,", ",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:35:23) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:36:15) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:36:41) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas a e b invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:37:24) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas"a,"e",b,"invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- ERROR:
File "XXXX", line 5
    print("Entradas"a,"e",b,"invalidas")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:37:34) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:37:44) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.199095
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:25:06) 
-- CODE:
x=float(input("Digite o valor x: "))
a=float(input("Digite o valor a: "))
b=float(input("Digite o valor b: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(x>=a)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
   print(x,"nao pertence ao intervalo",a,",",b)	

-- EXECUTION TIME:
0.183269
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
